--- a/src/components/Main/Content/style.scss
+++ b/src/components/Main/Content/style.scss
@@ -5,23 +5,27 @@
     margin-bottom: 4rem;
     
     &-title{
-        margin: 6rem;
+        margin: 8rem 1rem 8rem 1rem;
     }
 
     &-description{
-        margin: 6rem;
+        margin: 8rem 2rem 8rem 2rem;
     }
     &-question{
-        margin: 10rem;
+        margin: 8rem 2rem 8rem 2rem;
     }
     &-experience{
+        margin: 2rem;
         &-list{
-            margin: 2rem;
             margin-bottom: 4rem;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            
         }
     
         &-card{
-            margin: 2rem;
+            margin-bottom: 2rem;
         }
     }
 }
