--- a/src/components/Resume/style.scss
+++ b/src/components/Resume/style.scss
@@ -4,6 +4,10 @@
     align-items: center;
 
     &-title{
+        margin: 3rem;
+    }
+    &-image{
+        width: 18rem;
         margin: 2rem;
     }
     &-list{
