--- a/src/components/Main/Content/style.scss
+++ b/src/components/Main/Content/style.scss
@@ -6,6 +6,8 @@
     
     &-title{
         margin: 8rem 1rem 8rem 1rem;
+        overflow: hidden;
+        display: flex;
     }
 
     &-description{
