--- a/src/components/Resume/style.scss
+++ b/src/components/Resume/style.scss
@@ -19,9 +19,11 @@
     }
     &-list{
         margin: 3rem;
+        text-align: justify;
     }
     &-end{
         margin: 2rem;
+        text-align: justify;
     }
     &-download{
         display: flex;
