--- a/src/components/Main/Content/style.scss
+++ b/src/components/Main/Content/style.scss
@@ -20,18 +20,29 @@
         margin: 8rem 2rem 8rem 2rem;
         text-align: justify;
     }
+    &-icon{
+        display: inline-flex;
+        flex-wrap: wrap;
+        margin: 1rem 1.5rem 5rem 1.5rem;
+        justify-content: space-evenly;
+
+        &-item{
+            height: 5rem;
+            margin: .5rem;
+        }
+    }
     &-experience{
         margin: 2rem;
         &-list{
             margin-bottom: 4rem;
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: space-evenly;
             text-align: justify;
         }
     
         &-card{
-            margin-bottom: 2rem;
+            margin: 1rem;
         }
     }
 }
