--- a/src/components/Main/Content/style.scss
+++ b/src/components/Main/Content/style.scss
@@ -9,7 +9,14 @@
         overflow: hidden;
         display: flex;
         font-weight: 800;
-        font-size: 2.8rem;
+        font-size: 2.8rem;  
+    }
+    
+    /* Media Queries => gestion du responsive */
+    @media screen and (max-width: 360px) {
+    &-title {
+        font-size: 1.5rem;
+    }
     }
 
     &-description{
