--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -17,10 +17,35 @@
 
     &-card{
         margin: 1rem;
+
+        &-title{
+            position: absolute;
+            top: 12rem;
+            text-decoration: none;
+            font-size: 1.3rem;
+        }
+
+        &-text{
+            position: absolute;
+            top: 14rem;
+            width: 16rem;
+        }
+
         &-label{
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
+            margin-top: 1rem;
+            
+            &-one{
+                margin-bottom: .2rem;
+            }
+        }
+
+        &-button{
+            position: absolute;
+            bottom: .5rem;
+            left: 3rem;
         }
     }
 }
