Custom color & React Icon FA

--- a/src/components/Main/Content/style.scss
+++ b/src/components/Main/Content/style.scss
@@ -58,6 +58,11 @@
             margin: 1rem;
         }
     }
+    &-progress{
+        position: -webkit-sticky;
+        position: sticky;
+        bottom: 1rem;
+    }
 }
 
 .button{
