--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,5 +1,6 @@
-@use '../styles/vars';
+@use '../styles/vars' as v;
 
 .App {
-  font-family:  vars.$font-sans;
+  font-family:  v.$font-sans;
+  background-color: v.$info;
 }
