--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 91vh;
 
     &-title{
         margin: 3rem;
@@ -9,6 +10,7 @@
 
     &-form{
        width: 50rem;
+       // margin-bottom: 40vh;
     }
     @media screen and (max-width: 800px) {
         &-form{
