--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -7,6 +7,9 @@
     align-items: center;
     position: fixed;
     bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 85%;
     
     &-icon{
         display: inline-flex;
@@ -15,4 +18,5 @@
     &-text{
         font-size: small;
     }
+
 }
