--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -8,7 +8,7 @@
     }
 
     &-list{
-        margin-bottom: 4rem;
+        margin: 4rem 20rem 4rem 20rem;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
