--- a/src/components/Resume/style.scss
+++ b/src/components/Resume/style.scss
@@ -29,6 +29,7 @@
         display: flex;
         flex-direction: column;
         margin: 2rem;
+        margin-bottom: 5rem;
         &-item{
             margin: 1rem;
         }
