Toggler: Add Dark/light mode

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,14 @@
 @use '../styles/vars' as v;
 
 .App {
-  font-family:  v.$font-sans;
-  background-color: v.$info;
+  
+  &-light{
+    font-family:  v.$font-sans;
+    background-color: v.$light;
+  }
+  &-dark{
+    font-family:  v.$font-sans;
+    background-color: v.$primary;
+  }
+
 }
