--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -2,11 +2,11 @@
 $font-sans: 'Sono', sans-serif;
 
 // Override default variables before the import
-$primary: #49798C;
-$secondary: #D9BEA7;
+$primary: #254559;
+$secondary: #49798C;
 $success: #9C8F31;
-$info: #bfd4d9;
-$warning: #b8c924;
-$danger: #BF9B8E;
-$light: #F2EAE4;
-$dark: #254559;
+$info: #D9BCA3;
+$warning: #592525;
+$danger: #735E20;
+$light: #F2EEEB;
+$dark: #0A0A0D;
