--- a/src/components/Main/Content/style.scss
+++ b/src/components/Main/Content/style.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/vars' as v;
+
 .Content{
     display: flex;
     flex-direction: column;
@@ -10,6 +12,7 @@
         display: flex;
         font-weight: 800;
         font-size: 2.7rem;  
+        color: v.$secondary;
     }
     
     /* Media Queries => gestion du responsive */
