Projects: change hover

--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -54,6 +54,7 @@
 
     &-card:hover{
         background-color: v.$light;
-        box-shadow: 3px 3px v.$dark;
+        box-shadow: 4px 4px v.$dark;
+        transition-duration: 800ms;
     }
 }
