--- a/src/components/Main/Content/style.scss
+++ b/src/components/Main/Content/style.scss
@@ -12,7 +12,7 @@
         display: flex;
         font-weight: 800;
         font-size: 2.7rem;  
-        color: v.$secondary;
+        color: v.$success;
     }
     
     /* Media Queries => gestion du responsive */
