Icon: toggle DarkMode

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -11,4 +11,11 @@
     background-color: v.$primary;
   }
 
+  &-icon{
+    position: absolute;
+    right: 0;
+    margin: 1rem ;
+    font-size: 3rem;
+    color: v.$secondary;
+  }
 }
