--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -11,11 +11,16 @@
     background-color: v.$primary;
   }
 
-  &-icon{
-    position: absolute;
+  &-icon-group{
+    position: fixed;
     right: 0;
     margin: 1rem ;
-    font-size: 3rem;
+    font-size: 2.6rem;
     color: v.$secondary;
+    background-color: v.$info;
+    padding: .5rem;
+    border-radius: 50px;
+    z-index: 100;
   }
+ 
 }
