--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -14,8 +14,8 @@
   &-icon-group{
     position: fixed;
     right: 0;
-    margin: 1rem ;
-    font-size: 2.6rem;
+    margin: .5rem ;
+    font-size: 1.4rem;
     color: v.$secondary;
     background-color: v.$info;
     padding: .5rem;
