--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -26,6 +26,7 @@
             top: 12rem;
             text-decoration: none;
             font-size: 1.3rem;
+            color: v.$secondary;
         }
 
         &-text{
@@ -39,7 +40,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            margin-top: 1rem;
+            margin-top: 3rem;
             
             &-one{
                 margin-bottom: .2rem;
