--- a/src/components/Content/style.scss
+++ b/src/components/Content/style.scss
@@ -69,6 +69,7 @@
     
         &-card{
             margin: 1rem;
+            box-shadow: 5px 5px 4px v.$secondary;
             
             &-item{
                 position: absolute;
