projectsData : add json

--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -20,6 +20,10 @@
 
     &-card{
         margin: 1rem;
+        &-img{
+            object-fit: contain;
+            max-height: 11rem;
+        }
 
         &-title{
             position: absolute;
