--- a/src/components/Content/style.scss
+++ b/src/components/Content/style.scss
@@ -80,6 +80,7 @@
             }
             &-title{
                 font-size: 12px;
+                color: v.$secondary;
             }
             &-image{
                 width: auto;
