--- a/src/components/Content/style.scss
+++ b/src/components/Content/style.scss
@@ -5,6 +5,12 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 10rem;
+
+    &-projects{
+        display: inline-flex;
+        flex-wrap: wrap;
+        margin-bottom: 5rem;
+    }
     
     &-title{
         margin: 14rem 1rem 6rem 1rem;
