Content: responsive for animation

--- a/src/components/Resume/style.scss
+++ b/src/components/Resume/style.scss
@@ -34,9 +34,9 @@
     }
 
     &-end{
-        margin: 2rem;
         text-align: justify;
         color: v.$secondary;
+        margin-bottom: 6rem;
     }
     &-download{
         display: flex;
