--- a/src/components/Content/style.scss
+++ b/src/components/Content/style.scss
@@ -10,7 +10,17 @@
         display: inline-flex;
         flex-wrap: wrap;
         margin-bottom: 5rem;
+        
     }
+
+    @media screen and (max-width: 600px) {
+        &-projects {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 5rem;
+            }
+        }
     
     &-title{
         margin: 14rem 1rem 6rem 1rem;
@@ -36,10 +46,28 @@
     }
 
     &-description{
-        margin: 8rem 8rem 8rem 8rem;
+        margin: 8rem 8rem 12rem 8rem;
         text-align: justify;
         color: v.$secondary;
+        max-width: 60rem;
+        background-color: v.$info;
+        padding: 2rem;
+        border-radius: 20px;
+        transition-duration: 0.8s;
     }
+
+    &-description:hover{
+        margin: 8rem 8rem 12rem 8rem;
+        text-align: justify;
+        color: v.$info;
+        max-width: 60rem;
+        background-color: v.$primary;
+        padding: 2rem;
+        border-radius: 20px;
+        transition-duration: 0.8s;
+
+    }
+
     @media screen and (max-width: 600px) {
         &-description {
             margin: 6rem 2rem 2rem 2rem;
