add text & skills

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,7 +4,7 @@ $font-sans: 'Sono', sans-serif;
 // Override default variables before the import
 $primary: #254559;
 $secondary: #49798C;
-$success: #9C8F31;
+$success: #8C752E;
 $info: #D9BCA3;
 $warning: #592525;
 $danger: #735E20;
